Updated README.md with some hints on using Ansible Vault and do the download and unzip steps in one step

--- a/ansible/install_sanity_check.yml
+++ b/ansible/install_sanity_check.yml
@@ -9,15 +9,8 @@
     - name: Create temp directory for github-release-downloader
       file: path=/tmp/dl-github-release state=directory mode=0775
 
-    # Unfortunately download fails this way...
-    # - name: Download github release downloader
-    #   unarchive: src="https://github.com/palette-software/dl-github-release/releases/download/v1.0.2/linux_amd64.zip" dest=/tmp/dl-github-release copy=no
-
     - name: Download github release downloader
-      shell: 'wget -P /tmp/dl-github-release/ https://github.com/palette-software/dl-github-release/releases/download/v1.0.2/linux_amd64.zip'
-
-    - name: Unpack github release downloader
-      unarchive: src="/tmp/dl-github-release/linux_amd64.zip" dest=/tmp/dl-github-release copy=no
+      unarchive: src="https://github.com/palette-software/dl-github-release/releases/download/v1.0.2/linux_amd64.zip" dest=/tmp/dl-github-release/ copy=no
 
     - name: Download insight-tester with github release downloader
       shell: '/tmp/dl-github-release/linux_amd64/dl-github-release palette-software insight-tester {{ github_token }}'
