--- a/ansible/roles/sanity-check/tasks/main.yml
+++ b/ansible/roles/sanity-check/tasks/main.yml
@@ -2,16 +2,8 @@
 - name: Create temp directory for github-release-downloader
   file: path=/tmp/dl-github-release state=directory mode=0775 owner=insight group=insight
 
-# Unfortunately download fails this way...
-# - name: Download github release downloader
-#   unarchive: src="https://github.com/palette-software/dl-github-release/releases/download/v1.0.2/linux_amd64.zip" dest=/tmp/dl-github-release copy=no
-
 - name: Download github release downloader
-  shell: 'wget -P /tmp/dl-github-release/ https://github.com/palette-software/dl-github-release/releases/download/v1.0.2/linux_amd64.zip'
-  become_user: insight
-
-- name: Unpack github release downloader
-  unarchive: src="/tmp/dl-github-release/linux_amd64.zip" dest=/tmp/dl-github-release copy=no
+  unarchive: src="https://github.com/palette-software/dl-github-release/releases/download/v1.0.2/linux_amd64.zip" dest=/tmp/dl-github-release/ copy=no
   become_user: insight
 
 - name: Download insight-tester with github release downloader
