--- a/ansible/roles/insight-loadtables/tasks/crontab-tasks.yml
+++ b/ansible/roles/insight-loadtables/tasks/crontab-tasks.yml
@@ -2,6 +2,9 @@
 
 # ==================== CRONTAB VACUUM ====================
 
+- name: Create log directory for VACUUM script
+  file: path=/var/log/vacuum state=directory mode=0755 owner=root group=gpadmin
+
 - name: Create VACUUM crontab shell script
   template: src=vacuum.sh dest=/home/gpadmin/vacuum.sh owner=gpadmin group=gpadmin mode="u=rwx,g=rx,o=rx"
 
