--- a/ansible/roles/sanity-check/tasks/main.yml
+++ b/ansible/roles/sanity-check/tasks/main.yml
@@ -1,45 +1,45 @@
 ---
 - name: Create temp directory for github-release-downloader
-  file: path=/tmp/dl-github-release state=directory mode=0775 owner=insight group=insight
+  file: path={{ sanity_check_temporary_download_dir }} state=directory mode=0775 owner=insight group=insight
 
 - name: Download github release downloader
-  unarchive: src="https://github.com/palette-software/dl-github-release/releases/download/v1.0.2/linux_amd64.zip" dest=/tmp/dl-github-release/ copy=no
+  unarchive: src="https://github.com/palette-software/dl-github-release/releases/download/v1.0.2/linux_amd64.zip" dest={{ sanity_check_temporary_download_dir }} copy=no
   become_user: insight
 
 - name: Download insight-tester with github release downloader
-  shell: '/tmp/dl-github-release/linux_amd64/dl-github-release palette-software insight-tester {{ github_token }}'
+  shell: '{{ sanity_check_temporary_download_dir }}/linux_amd64/dl-github-release palette-software insight-tester {{ github_token }}'
   become_user: insight
   args:
-    chdir: /tmp/dl-github-release/linux_amd64
+    chdir: '{{ sanity_check_temporary_download_dir }}/linux_amd64'
   no_log: True
 
 - name: Unpack insight-tester to acquire dbcheck (sanity checker)
-  unarchive: src=/tmp/dl-github-release/linux_amd64/linux_amd64.zip dest=/tmp/dl-github-release/ copy=no
+  unarchive: src={{ sanity_check_temporary_download_dir }}/linux_amd64/linux_amd64.zip dest={{ sanity_check_temporary_download_dir }} copy=no
   become_user: insight
 
 - name: Delete previous sanity checker installations
-  file: path='/opt/insight-sanity-check' state=absent
+  file: path='{{ sanity_check_install_dir }}' state=absent
   become_user: root
 
 - name: Create directory for sanity checker
-  file: path='/opt/insight-sanity-check' state=directory mode=0775 owner=insight group=insight
+  file: path='{{ sanity_check_install_dir }}' state=directory mode=0775 owner=insight group=insight
   become_user: root
 
 - name: Place sanity checker to its final destination (overwrite earlier contents)
-  shell: 'mv -f /tmp/dl-github-release/linux_amd64/sanity_check/* /opt/insight-sanity-check/'
+  shell: 'mv -f {{ sanity_check_temporary_download_dir }}/linux_amd64/sanity_check/* {{ sanity_check_install_dir }}'
   become_user: insight
 
 - name: Delete temporary folders
-  file: path='/tmp/dl-github-release' state=absent
+  file: path='{{ sanity_check_temporary_download_dir }}' state=absent
 
 - name: Make sanity check configuration
-  template: src=Config.yml dest=/opt/insight-sanity-check/Config.yml owner=insight group=insight
+  template: src=Config.yml dest={{ sanity_check_install_dir }}/Config.yml owner=insight group=insight
 
 # - name: Execute sanity check once
 #   shell: './dbcheck tests/sanity_checks.yml Config.yml'
 #   args:
-#     chdir: /opt/insight-sanity-check
+#     chdir: '{{ sanity_check_install_dir }}'
 
 - name: Schedule sanity check via cron
-  cron: name="Palette Insight Sanity Checks" minute="*/10" job="/opt/insight-sanity-check/dbcheck /opt/insight-sanity-check/tests/sanity_checks.yml /opt/insight-sanity-check/Config.yml > /dev/null" user=insight
+  cron: name="Palette Insight Sanity Checks" minute="*/10" job="{{ sanity_check_install_dir }}/dbcheck {{ sanity_check_install_dir }}/tests/sanity_checks.yml {{ sanity_check_install_dir }}/Config.yml > /dev/null" user=insight
   become_user: root
