--- a/ansible/roles/sanity-check/templates/Config.yml
+++ b/ansible/roles/sanity-check/templates/Config.yml
@@ -2,10 +2,10 @@ DbConnector:
     Host: localhost
     Port: 5432
     User: palette_etl_user
-    Password: palette123
+    Password: {{ gp_palette_password }}
     Database: palette
     Schema: go_test
 
-SplunkServerAddress: "splunk-insight.palette-software.net"
+SplunkServerAddress: {{ splunk_server_address }}
 SplunkToken: "F59DC3B4-AAB9-4330-ACED-682E1681B507"
 SplunkCustomer: {{ splunk_host }}
