fix: accept the splunk license agreement on init script creation

--- a/ansible/roles/splunkforwarder/tasks/main.yml
+++ b/ansible/roles/splunkforwarder/tasks/main.yml
@@ -16,6 +16,6 @@
   register: splunk_init_script
 
 - name: Setup splunk to run on system start
-  command: /opt/splunkforwarder/bin/splunk enable boot-start -user splunk
+  command: /opt/splunkforwarder/bin/splunk enable boot-start --accept-license -user splunk
   when: not splunk_init_script.stat.exists
 
