fixes for OPI - refactor data device name to a variable with default - install python selinux bindings before setting the hostname - document SSH requirements for gpssh-exkeys

--- a/ansible/loadtables.yml
+++ b/ansible/loadtables.yml
@@ -1,6 +1,6 @@
 ---
 - name: Loadtable update
-  hosts: insight-server
+  hosts: "{{ channel | default('insight-server') }}"
   remote_user: "{{ uservar }}"
   become: yes
   become_user: root
