--- a/ansible/roles/xfs-init/defaults/main.yml
+++ b/ansible/roles/xfs-init/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
-mount_dir: /data
+data_mount_dir: /data
 # Note: Newer linux kernels may rename your devices to /dev/xvdf through
 # /dev/xvdp internally, even when the device name entered here (and shown in
 # the details) is /dev/sdf through /dev/sdp.
 #
-mount_dev: /dev/xvdb
+data_mount_dev: /dev/xvdb
