--- a/ansible/roles/insight-loadtables/tasks/install-reporting.yml
+++ b/ansible/roles/insight-loadtables/tasks/install-reporting.yml
@@ -32,7 +32,7 @@
 
 - name: Run initial loadtables to generate tables in GP
   become_user: insight
-  shell: "{{ insight_talend_location }}/load_tables.sh"
+  shell: "{{ insight_talend_location }}/load_tables.sh > /home/insight/load_tables.out.0; {{ insight_talend_location }}/load_tables.sh"
   register: initial_loadtables
   failed_when: initial_loadtables|failed or '{{ loadtables_no_external_tables_error_msg }}' in initial_loadtables.stderr
   # As this task may time out, do this here
