statically define number of segments

--- a/ansible/insight-server.yml
+++ b/ansible/insight-server.yml
@@ -4,7 +4,8 @@
   remote_user: "{{ uservar }}"
   become: yes
   become_user: root
-
+  vars:
+    num_segments: 4
   roles:
     - common
     - xfs-init
