automate opi image build

--- a/packer/insight-server-centos-68-kickstart/ks.cfg
+++ b/packer/insight-server-centos-68-kickstart/ks.cfg
@@ -1,8 +1,6 @@
 zerombr
 clearpart --all --initlabel
-part /boot --size 512
 part / --size 8192
-part /var --size 8192
 part swap --size 32768
 # autopart
 
@@ -10,7 +8,7 @@ auth --useshadow --enablemd5
 bootloader
 lang en_US.UTF-8
 keyboard us
-# network --bootproto=dhcp
+network --bootproto=dhcp --hostname=palette-insight-opi
 rootpw exclaimedtowntrackcheese
 firewall --disabled
 # firewall --enabled --service=ssh
@@ -22,7 +20,7 @@ skipx
 %post
 # centos user
 groupadd centos -g 999
-useradd centos -g centos -G wheel -u 900 -s /bin/bash
+useradd centos -g centos -G wheel -u 999 -s /bin/bash
 echo "exclaimedtowntrackcheese" | passwd --stdin centos
 # sudo
 echo "centos ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
