Allow Greenplum access from IPv6 localhost

--- a/ansible/roles/greenplum-data/tasks/main.yml
+++ b/ansible/roles/greenplum-data/tasks/main.yml
@@ -21,6 +21,7 @@
     - "host all all 0.0.0.0/0 md5"
     # allow ssl connection
     - "hostssl all all 0.0.0.0/0 md5"
+    - "host all all ::1/128 trust"
 
 - name: Tune Greenplum before the restart
   include: "tuning.yml"
