--- a/ansible/insight-server.yml
+++ b/ansible/insight-server.yml
@@ -13,7 +13,7 @@
     - nginx
     - supervisor
     - splunkforwarder
-    - golang
+    # - golang
     - greenplum
     - greenplum-data
     - insight-loadtables
