Place insight server's web UI logs into a separate logfile

--- a/ansible/roles/insight-services-webui/templates/supervisor.conf
+++ b/ansible/roles/insight-services-webui/templates/supervisor.conf
@@ -32,7 +32,7 @@ user=centos
 redirect_stderr=true          ; redirect proc stderr to stdout (default false)
 
 ; stdout log path, NONE for none; default AUTO
-stdout_logfile=/var/log/palette-insight-server/palette-insight-server.log
+stdout_logfile={{ insight_services_log_dir }}/webui.log
 
 ;;stdout_logfile_maxbytes=1MB   ; max # logfile bytes b4 rotation (default 50MB)
 ;;stdout_logfile_backups=10     ; # of stdout logfile backups (default 10)
@@ -40,7 +40,7 @@ stdout_logfile=/var/log/palette-insight-server/palette-insight-server.log
 ;;stdout_events_enabled=false   ; emit events on stdout writes (default false)
 
 ;;stderr log path, NONE for none; default AUTO
-;;stderr_logfile=/var/log/palette-insight-server/palette-insight-server.log
+stderr_logfile={{ insight_services_log_dir }}/webui.log
 
 ;;stderr_logfile_maxbytes=1MB   ; max # logfile bytes b4 rotation (default 50MB)
 ;;stderr_logfile_backups=10     ; # of stderr logfile backups (default 10)
