Make sure obsolate reporting crontab is deleted

--- a/ansible/roles/insight-loadtables/tasks/crontab-tasks.yml
+++ b/ansible/roles/insight-loadtables/tasks/crontab-tasks.yml
@@ -4,6 +4,9 @@
 - name: Add talend loadtables to crontab (run every minute)
   cron: user=insight name="Palette Insight Load Tables" job="{{ insight_talend_location }}/load_tables.sh"
 
+- name: Make sure obsolate Reporting crontab is disabled
+  cron: user=insight name="Palette Insight Reporting" state=absent job="{{ insight_talend_location }}/run_reporting.sh"
+
 - name: Create Load Control shell script
   template: src=loadctrl.sh dest=/home/insight/loadctrl.sh owner=insight group=insight mode="u=rwx,g=rx,o=rx"
 
