--- a/ansible/roles/new-relic/tasks/main.yml
+++ b/ansible/roles/new-relic/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
 - name: Add New Relic repository
-  shell: rpm -Uvh https://download.newrelic.com/pub/newrelic/el5/i386/newrelic-repo-5-3.noarch.rpm
+  yum:
+    name: https://download.newrelic.com/pub/newrelic/el5/i386/newrelic-repo-5-3.noarch.rpm
+    state: present
   
 - name: Install New Relic package
   yum: 
