--- a/ansible/roles/insight-loadtables/tasks/install-reporting.yml
+++ b/ansible/roles/insight-loadtables/tasks/install-reporting.yml
@@ -1,7 +1,4 @@
-# ---
-# - name: Install Insight-reporting to {{ insight_reporting_location }}
-#   yum: name=palette-insight-reporting state=latest update_cache=yes
-
+---
 
 # ==================== INITIAL METADATA ====================
 
@@ -58,21 +55,8 @@
 
 # ==================== FULL DATAMODEL ========================
 
-- name: Copy data model 'yummer' to gpadmin's home
-  copy:
-    src: "roles/insight-loadtables/files/update-data-model.sh"
-    dest: "/opt/palette-insight-reporting/update-data-model.sh"
-    owner: root
-    group: root
-    mode: 0744
-
-- name: Copy data model updater script to gpadmin's home
-  copy:
-    src: "roles/insight-loadtables/files/gpadmin-install-data-model.sh"
-    dest: "/opt/palette-insight-reporting/gpadmin-install-data-model.sh"
-    owner: root
-    group: root
-    mode: 0744
+- name: Install Insight-reporting to {{ insight_reporting_location }}
+  yum: name=palette-insight-reporting state=latest update_cache=yes
 
 - name: Install the data model
   shell: /opt/palette-insight-reporting/update-data-model.sh {{ insight_datamodel_version }}
@@ -81,37 +65,3 @@
   changed_when: "datamodel_install_res.rc == 0 and '-------------------- OK --------------------' not in datamodel_install_res"
   become: yes
   become_user: root
-
-# - name: Install the data model
-#   shell: >
-#     source {{ greenplum_install_path }}/greenplum_path.sh &&
-#     {{ insight_reporting_location }}/insight-datamodel-install.sh
-#     {{ insight_datamodel_version }}
-#   notify: Restart splunk
-#   register: datamodel_install_res
-#   changed_when: "datamodel_install_res.rc == 0 and '-------------------- OK --------------------' not in datamodel_install_res"
-#   become: yes
-#   become_user: gpadmin
-
-#- name: Create a copy of full_install.sql to {{ reporting_tmp_install_file }}
-  #copy: remote_src=yes src={{ reporting_full_install_file }} dest={{ reporting_tmp_install_file }} owner=gpadmin group=gpadmin mode="u=rw"
-
-#- name: "Replace '#schema_name#' with {{ insight_schema_name }} in {{ reporting_tmp_install_file }}"
-  #replace: dest={{ reporting_tmp_install_file }} regexp='#schema_name#' replace={{ insight_schema_name }}
-
-
-#- name: Install the full datamodel using full_install.sql
-  #shell: >
-    #source {{ greenplum_install_path }}/greenplum_path.sh &&
-    #{{greenplum_install_path}}/bin/psql
-    #-d {{ insight_database_name }}
-    #-f {{ reporting_tmp_install_file }}
-  #args:
-    #chdir: "{{ insight_reporting_location }}/full-install"
-  #register: reporting_full_install
-  #become: yes
-  #become_user: gpadmin
-  #ignore_errors: yes
-  #failed_when: "reporting_full_install.rc != 0 and ('{{ version_table_exists_error_msg }}' not in reporting_full_install.stderr)"
-  #changed_when: "reporting_full_install.rc == 0"
-  #notify: Restart splunk
