Create flock for sanity checks so that they won't get queued up

--- a/ansible/roles/sanity-check/tasks/main.yml
+++ b/ansible/roles/sanity-check/tasks/main.yml
@@ -35,11 +35,14 @@
 - name: Make sanity check configuration
   template: src=Config.yml dest={{ sanity_check_install_dir }}/Config.yml owner=insight group=insight
 
+- name: Make sanity check runner script for cron
+  template: src=roles/sanity-check/templates/sanity-check.sh dest={{ sanity_check_install_dir }}/sanity-check.sh owner=insight group=insight
+
 # - name: Execute sanity check once
 #   shell: './dbcheck tests/sanity_checks.yml Config.yml'
 #   args:
 #     chdir: '{{ sanity_check_install_dir }}'
 
 - name: Schedule sanity check via cron
-  cron: name="Palette Insight Sanity Checks" minute="*/10" job="{{ sanity_check_install_dir }}/dbcheck {{ sanity_check_install_dir }}/tests/sanity_checks.yml {{ sanity_check_install_dir }}/Config.yml > /dev/null" user=insight
+  cron: name="Palette Insight Sanity Checks" minute="*/10" job="{{ sanity_check_install_dir }}/sanity-check.sh" user=insight
   become_user: root
