--- a/ansible/roles/insight-loadtables/tasks/install-reporting.yml
+++ b/ansible/roles/insight-loadtables/tasks/install-reporting.yml
@@ -60,6 +60,8 @@
 
 - name: Install the data model
   shell: /opt/palette-insight-reporting/update-data-model.sh {{ insight_datamodel_version }}
+  environment:
+    UPDATE_PROGRESS_FILE: /tmp/insight-initial-update-progress.log
   notify: Restart splunk
   register: datamodel_install_res
   changed_when: "datamodel_install_res.rc == 0 and '-------------------- OK --------------------' not in datamodel_install_res"
