Install Insight Services Status Page via Ansible

--- a/ansible/roles/insight-services-webui/defaults/main.yml
+++ b/ansible/roles/insight-services-webui/defaults/main.yml
@@ -1,3 +1,4 @@
 
 insight_services_webui_dir: /opt/insight-services-webui
 insight_services_log_dir: /var/log/insight-services
+dl_github_temporary_download_dir: /tmp/dl-github-release
