--- a/ansible/roles/insight-services-webui/tasks/main.yml
+++ b/ansible/roles/insight-services-webui/tasks/main.yml
@@ -1,26 +1,80 @@
 ---
-- name: Create the insight-services GUI folder
-  file: path={{ insight_services_webui_dir }} state=directory mode=0755 owner=root group=root
+- name: Create folder for Insight Services Status Page
+  file: path={{ insight_services_webui_dir }} state=directory mode=0755 owner=insight group=insight
+  become_user: root
 
 - name: Create the insight-services log folder
-  file: path={{ insight_services_log_dir }} state=directory mode=0755 owner=root group=root
+  file: path={{ insight_services_log_dir }} state=directory mode=0755 owner=insight group=insight
+  become_user: root
 
-- name: Copy the insight-services contents
-  copy: src={{ file_name.name }} dest={{ insight_services_webui_dir }}/{{ file_name.name }} owner=root group=root mode={{ file_name.mode }}
+- name: Install python3.5 and pip3.5
+  yum:
+    name: '{{ item }}'
+    state: latest
+    update_cache: yes
+  become_user: root
   with_items:
-    - {name: server.py, mode: 755}
-    - {name: index.html, mode: 644}
-  loop_control:
-    loop_var: file_name
+    - python35u
+    - python35u-pip
+
+- name: Create python3 symlinks
+  file: src=/usr/bin/{{ item.src }} dest=/usr/bin/{{ item.dest }} state=link owner=root group=root
+  with_items:
+    - { src: 'python3.5', dest: 'python3' }
+    - { src: 'pip3.5', dest: 'pip3' }
+  become_user: root
+
+- name: Pip3 install status page requisities
+  shell: pip3 install {{ item }}
+  become_user: root
+  with_items:
+    - mako
+    - pyjade
+
+- name: Create temp directory for github-release-downloader
+  file: path={{ dl_github_temporary_download_dir }} state=directory mode=0775 owner=insight group=insight
+
+- name: Download github release downloader
+  unarchive: src="https://github.com/palette-software/dl-github-release/releases/download/v1.0.2/linux_amd64.zip" dest={{ dl_github_temporary_download_dir }} copy=no
+  become_user: insight
+
+- name: Download Insight Services Status Page with github release downloader
+  shell: '{{ dl_github_temporary_download_dir }}/linux_amd64/dl-github-release palette-software insight-services-status {{ github_token }}'
+  args:
+    chdir: '{{ dl_github_temporary_download_dir }}/linux_amd64'
+  become_user: insight
+  no_log: True
+
+### FIXME: This is a real problem here that the version is in the name of the .zip. And there must be a better solution
+- name: Workaround for downloaded release having the version in its name
+  shell: 'mv {{ dl_github_temporary_download_dir }}/linux_amd64/insight-services-status-v*.zip {{ dl_github_temporary_download_dir }}/linux_amd64/insight-services-status.zip'
+
+- name: Unpack Insight Services Status Page
+  unarchive:
+    src: '{{ dl_github_temporary_download_dir }}/linux_amd64/insight-services-status.zip'
+    dest: '{{ dl_github_temporary_download_dir }}'
+    copy: no
+  become_user: insight
+
+- name: Place Insight Services Status Paget into its final destination (overwrite earlier contents)
+  shell: 'cp -rf {{ dl_github_temporary_download_dir }}/home/travis/build/palette-software/insight-services-status/* {{ insight_services_webui_dir }}'
+  become_user: insight
+
+- name: Delete temporary folders
+  file: path='{{ dl_github_temporary_download_dir }}' state=absent
 
 - name: Create the insight-services-webui service via supervisord
   template: src=supervisor.conf dest=/etc/supervisord.d/insight-services-webui.ini owner=root group=root mode=664
+  become_user: root
 
 - name: Update the nginx default site to forward requests to the services webui
   template: src=nginx.site.conf dest=/etc/nginx/conf.d/default.conf owner=root group=root mode=0644
+  become_user: root
 
 - name: (Re)start insight-services-webui via supervisord
   supervisorctl: name=insight-services-webui state=restarted
+  become_user: root
 
 - name: Reload the nginx configuration so it forwards the http root to the insight-services
   service: name=nginx state=reloaded
+  become_user: root
