--- a/ansible/roles/insight-services-webui/templates/supervisor.conf
+++ b/ansible/roles/insight-services-webui/templates/supervisor.conf
@@ -3,7 +3,7 @@
 
 [program:insight-services-webui]
 ; the program (relative uses PATH, can take args)
-command={{ insight_services_webui_dir }}/server.py
+command=python3 {{ insight_services_webui_dir }}/server.py
 log_stdout=true             ; if true, log program stdout (default true)
 log_stderr=true             ; if true, log program stderr (def false)
 logfile={{ insight_services_log_dir }}/webui.log
