--- a/ansible/roles/insight-server/tasks/main.yml
+++ b/ansible/roles/insight-server/tasks/main.yml
@@ -1,17 +1,10 @@
 ---
-- name: Create Insight Server installer/updater script
-  copy:
-    src: update-insight-server.sh
-    dest: /opt/update-insight/update-insight-server.sh
-    owner: root
-    group: root
-    mode: "0744"
-
 - name: Install Insight Server
-  shell: /opt/update-insight/update-insight-server.sh
+  shell: /opt/insight-toolkit/update-insight-server.sh
   environment:
     UPDATE_PROGRESS_FILE: /tmp/insight-initial-update-progress.log
   become: yes
-  become_user: root
+  become_user: insight
   notify:
     - Restart splunk
+    - Restart nginx
