--- a/ansible/roles/insight-services-webui/tasks/main.yml
+++ b/ansible/roles/insight-services-webui/tasks/main.yml
@@ -24,41 +24,14 @@
     - { src: 'pip3.5', dest: 'pip3' }
   become_user: root
 
-- name: Create temp directory for github-release-downloader
-  file: path={{ dl_github_temporary_download_dir }} state=directory mode=0775 owner=insight group=insight
-
-- name: Download github release downloader
-  unarchive: src="https://github.com/palette-software/dl-github-release/releases/download/v1.0.2/linux_amd64.zip" dest={{ dl_github_temporary_download_dir }} copy=no
-  become_user: insight
-
-- name: Download Insight Services Status Page with github release downloader
-  shell: '{{ dl_github_temporary_download_dir }}/linux_amd64/dl-github-release palette-software insight-services-status {{ github_token }}'
-  args:
-    chdir: '{{ dl_github_temporary_download_dir }}/linux_amd64'
-  become_user: insight
-  no_log: True
-
-### FIXME: This is a real problem here that the version is in the name of the .zip. And there must be a better solution
-- name: Workaround for downloaded release having the version in its name
-  shell: 'mv {{ dl_github_temporary_download_dir }}/linux_amd64/insight-services-status-v*.zip {{ dl_github_temporary_download_dir }}/linux_amd64/insight-services-status.zip'
-
-- name: Unpack Insight Services Status Page
-  unarchive:
-    src: '{{ dl_github_temporary_download_dir }}/linux_amd64/insight-services-status.zip'
-    dest: '{{ dl_github_temporary_download_dir }}'
-    copy: no
-  become_user: insight
-
-- name: Place Insight Services Status Page into its final destination (overwrite earlier contents)
-  shell: 'cp -rf {{ dl_github_temporary_download_dir }}/home/travis/build/palette-software/insight-services-status/* {{ insight_services_webui_dir }}'
-  become_user: insight
+- name: Collect Insight Services Status Page RPM
+  yum:
+    name: palette-insight-website
+    state: latest
 
 - name: Pip3 install status page requisities
   shell: pip3 install -r {{ insight_services_webui_dir }}/requirements.txt
   become_user: root
-
-- name: Delete temporary folders
-  file: path='{{ dl_github_temporary_download_dir }}' state=absent
 
 - name: Create the insight-services-webui service via supervisord
   template: src=supervisor.conf dest=/etc/supervisord.d/insight-services-webui.ini owner=root group=root mode=664
