Fixed precedence of installing Insight Toolkit and setting our RPM repo

--- a/ansible/roles/insight-services-webui/templates/supervisor.conf
+++ b/ansible/roles/insight-services-webui/templates/supervisor.conf
@@ -27,7 +27,7 @@ startsecs=1
 ;;stopwaitsecs=10               ; max num secs to wait b4 SIGKILL (default 10)
 ;
 ; setuid to this UNIX account to run the program
-user=centos
+user=insight
 
 redirect_stderr=true          ; redirect proc stderr to stdout (default false)
 
