--- a/ansible/roles/datadog-agent/tasks/main.yml
+++ b/ansible/roles/datadog-agent/tasks/main.yml
@@ -14,7 +14,7 @@
   copy: src={{ datadog_config_dir }}/datadog.conf.example dest={{ datadog_config_dir }}/datadog.conf remote_src=true owner=dd-agent group=root
   when: not dd_config_file.stat.exists
 
-- name: "Copy the example config into place and plug in DataDog API key ({{ datadog_api_key }}):"
+- name: "Copy the example config into place and plug in DataDog API key"
   lineinfile:
     dest: "{{ datadog_config_dir }}/datadog.conf"
     regexp: "api_key.*"
@@ -24,14 +24,8 @@
     mode: 0644
   when: not dd_config_file.stat.exists
 
-# ==================== DATADOG-POSTGRES ====================
-
-- name: Create the Datadog role for postgres
-  script: 'datadog_pg_role_creator.sh "{{ datadog_pg_role_password }}"'
-  become_user: gpadmin
-
-- name: Add postgres.yaml to DataDog config
-  template: src=postgres.datadog.yaml dest=/etc/dd-agent/conf.d/postgres.yaml
+- name: Setup Postgres integrations
+  include: "postgres-integration.yml"
 
 - name: Re-start the Datadog agent
   service: name=datadog-agent state=restarted
