--- a/ansible/roles/ec2-provision/tasks/create_instance.yml
+++ b/ansible/roles/ec2-provision/tasks/create_instance.yml
@@ -26,7 +26,7 @@
       wait: yes
       vpc_subnet_id: "{{ vpc_subnet_id }}"
       group_id: "{{ group_id }}"
-      key_name: 'palette-insight'
+      key_name: 'Palette-Insight-Standard-Keypair-2016-01-19'
       volumes:
         - device_name: /dev/sda1
           volume_type: gp2
