Pepsi is turned off at the moment

--- a/ansible/customers.ini
+++ b/ansible/customers.ini
@@ -12,7 +12,7 @@ isi-qa-insight splunk_host=ISI-QA cluster_name=isi-qa tableau_version=9.3.0
 bsx-insight splunk_host=BSCI-PROD cluster_name=bsci tableau_version=9.2.4
 netflix-insight splunk_host=NETFLIX cluster_name=netflix-cluster01 tableau_version=9.2.4
 isi-insight splunk_host=ISI-PROD cluster_name=ISI-Prod tableau_version=9.1.1
-pep-it-insight splunk_host=PEP-IT cluster_name=pep tableau_version=9.3.2
+; pep-it-insight splunk_host=PEP-IT cluster_name=pep tableau_version=9.3.2
 ; tsla-prod-insight splunk_host=TSLA-PROD cluster_name=TSLA-PROD tableau_version=9.3.2
 
 [insight-server:children]
@@ -32,6 +32,6 @@ isi-prod-center
 isi-qa-center
 netflix-center
 bsx-center
-pep-it-center
+; pep-it-center
 ; tsla-stage-center
 ; tsla-prod-center
