--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 retry_files_save_path = ~/.ansible/retry-files
-vault_password_file = ~/.ansible_vault_pass.txt
+vault_password_file = ~/.ansible/vault_pass.txt
 log_path = ~/.ansible/logs/ansible.log
 inventory = customers.ini
 
