Really shorten ssh ControlPath as it needs to be under 108 char.

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -6,8 +6,11 @@ inventory = customers.ini
 
 [ssh_connection]
 # The following one is need to avoid too long unix socket names,
-# which prevents creating SSH connections
-control_path = %(directory)s/%%h-%%p-%%retry-files
+# which prevents creating SSH connections. For it to work the 
+# following steps are needed at first
+### sudo mkdir /etc/ansible
+### sudo chown $(whoami):staff /etc/ansible
+control_path = /etc/ansible/%%h-%%r
 
 # Unfortunately freshly created AWS machines don't support pipelining
 # until 'TTY required' is unset
